--- a/ENations/Views/CompanyOwners/Index.cshtml
+++ b/ENations/Views/CompanyOwners/Index.cshtml
@@ -28,7 +28,7 @@
                 <thead class="thead-dark">
                     <tr>
                         <th>Username</th>
-                        <th>Company Type</th>
+                        <th>Company Id</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -39,10 +39,10 @@
                         {
                             <tr>
                                 <td>@owner.Username</td>
-                                <td>@company.Type</td>
+                                <td>@company.CompanyId</td>
                                 <td>
                                     <form asp-action="DeleteOwner" method="post">
-                                        <input type="hidden" name="companyId" value="@company.Type" />
+                                        <input type="hidden" name="companyId" value="@company.CompanyId" />
                                         <input type="hidden" name="userId" value="@owner.UserId" />
                                         <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this owner?');">Delete</button>
                                     </form>
